# openspawn

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Dockerfile.platform  LICENSE  README.md  SECURITY.md  codegen.ts  create_all_telemetry.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nx.json  oxfmt.json  oxlint.json  package.json  playwright.config.ts  pnpm-lock.yaml  project.json  schema.gql  tsconfig.base.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cleanup-caches.yml  deploy-platform.yml  deploy.yml  docs.yml  pages.yml  release-cli.yml
apps/api/: Dockerfile  (+3 more)
config/: init-db.sql  litellm.yaml  nginx.prod.conf
deploy/: Caddyfile  docker-compose.yml  setup-vps.sh
docs/: Gemfile  _config.yml  architecture.md  cli.md  getting-started.md  index.md  landing.md  openclaw-architecture.md  pitch-deck.md  roadmap.md  why-openspawn.md
docs-site/: astro.config.mjs  package.json
e2e/: comprehensive.spec.ts  debug-demo.spec.ts  demo-mobile.spec.ts  demo-mode.spec.ts  health.spec.ts  network-responsive.spec.ts  screenshots.spec.ts  user-flows.spec.ts
examples/: README.md
playwright-report/: index.html
scripts/: capture-screenshots.mjs  generate-icons.sh  install.sh  openspawn-demo.sh  publish-cli.sh  seed-admin.mjs  seed.mjs  sync-db.mjs  test-openclaw-integration.sh
sdks/python/: .gitignore  Makefile  README.md  pyproject.toml
sdks/python/src/openspawn/: __init__.py  auth.py  client.py  enums.py  http_client.py  models.py
sdks/python/src/openspawn/resources/: __init__.py  agents.py  credits.py  events.py  messages.py  tasks.py
sdks/python/tests/: __init__.py  test_agents_resource.py  test_auth.py  test_client.py  test_tasks_resource.py
tools/sandbox-python/: Dockerfile  README.md  pyproject.toml  run.py
tools/sandbox-python/app/: agents.py  mappers.py  server.py  simulation.py  types.py
tools/sandbox-python/tests/: test_agents.py  test_api.py  test_mappers.py  test_simulation.py  test_types.py
(+691 files in other folders)
